# mdns-relay

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose-swarm.yml  docker-compose.yml
etc/: mdns-relay.toml
src/: config.rs  engine.rs  errors.rs  lib.rs  main.rs  network.rs
systemd/: mdns-relay.service
